# shock_absorber

./: .env.example  Cargo.toml  README.md  shock_absorber.config.json  shock_absorber.sqlite3  system_prompt.md
.debug/: chat_transcript.md  current_task.txt  root_prompt_snapshot.md  summary_trace.md
.debug/agents/: agent_000_root_agent.md  agent_001_tool_agent_llm_search_tool_agent.md  agent_001_tool_agent_search_tool_agent.md  agent_001_tool_agent_summary_tool_agent.md  agent_001_tool_agent_summary_tool_unit.md  agent_002_collection_search_agent_collection_search_clearsky_moderation_lists_for_.md  agent_002_collection_search_agent_collection_search_global_bluesky_search_results_.md  agent_002_collection_search_agent_collection_search_profile_for_jcorvinus_bsky_soc.md  agent_002_collection_search_agent_collection_search_profile_for_rei_cast_xyz.md  agent_002_collection_search_agent_collection_search_profile_for_schizanon_bsky_soc.md  agent_002_collection_search_agent_collection_search_recent_replies_sent_by_did_plc.md  agent_002_collection_search_agent_collection_search_recent_top_level_posts_by_did_.md  agent_002_collection_search_tool_collection_search_clearsky_moderation_lists_for_.md  agent_002_collection_search_tool_collection_search_global_bluesky_search_results_.md  agent_002_collection_search_tool_collection_search_profile_for_rei_cast_xyz.md  agent_002_collection_search_tool_collection_search_recent_posts_by_did_plc_dzvxvs.md  agent_002_tool_agent_summary_tool_agent.md  (+99 more)
docs/: bugs.md
src/: app.rs  clearsky_v1.rs  db.rs  main.rs  net_backend.rs  post.rs
(+111 files in other folders)
