[package]
name = "shock_absorber"
version = "0.1.0"
edition = "2024"

[dependencies]
bsky-sdk = "0.1"
crossterm = "0.28"
dotenvy = "0.15"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"
